# pdf-parser

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.db  docker-compose.yml  main.py  pyproject.toml  worker.py
alembic/: env.py
alembic/versions/: 0e3a74eaf7a5_baseline.py  35fbd8e86e99_baseline.py  696cce876b38_baseline.py  93aee74ecdae_added_storage_id.py  c09c0bb88de2_baseline.py  c5f7d9ef8e40_baseline.py  e8ed57530d0e_added_parser_request.py  fc797e2a9990_create_jobs_table.py
app/: main.py
app/lib/: __init__.py  broker.py  config.py  db.py  logging.py
app/lib/ai/: pdf_tools.py
app/lib/ai/graphs/: __init__.py  pdf_graph.py
app/lib/ai/llm/: __init__.py  openai_client.py
app/lib/ai/llm_tools/: __init__.py  table_extraction_tool.py
app/lib/ai/prompts/: parser.py
app/lib/alembic/: __init__.py  entry_model.py  job_model.py  outbox_model.py  parse_job_model.py  parse_request_model.py  parser_file_model.py  parser_output_model.py  request_file_model.py
app/lib/di/: db.py
app/lib/storage/: storage_service.py
app/modules/health/: router.py  services.py
app/modules/parse_request/: __init__.py  jobs.py
app/modules/parse_request/output/: __init__.py  create_service.py  output_dto.py  output_repository.py
app/modules/parse_request/root/: __init__.py  parse_request_dto.py  parse_request_job_service.py  (+3 more)
app/modules/parser/: jobs.py  parser_repository.py  parser_router.py  parser_service.py  router.py  services.py
app/modules/post/: __init__.py  dtos.py  router.py  services.py
docs/: api-design.md  architecture-c4.md
tests/: test_health.py  test_parser.py  test_posts.py  test_storage_service.py
