[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "api"
version = "0.1.0"
description = "Initial FastAPI service scaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0,<2.0.0",
    "dramatiq[redis]>=1.18.0,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "loguru>=0.7.3",
    "openai>=2.37.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "redis>=5.0.0,<6.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0,<1.0.0",
    "pytest>=8.0.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
